# download-media

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  SECURITY.md  pyproject.toml
.github/workflows/: deploy-aur.yml  deploy-pages.yml
docs/: index.html
legacy/: PKGBUILD
legacy/completions/: _download-media  download-media.bash
legacy/man/: download-media.1
src/download_media/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  downloader.py  equivalent.py  history.py  i18n.py  probe.py  selection.py  ui.py  wizard.py
tests/: test_cli.py  test_config.py  test_downloader.py  test_equivalent.py  test_history.py  test_i18n.py  test_probe.py  test_selection.py  test_smoke.py  test_ui.py  test_wizard_dispatch.py
